# libvirt-python

./: .ctags  .gitignore  .gitlab-ci.yml  .gitpublish  .mailmap  .travis.yml  AUTHORS.in  CONTRIBUTING.rst  HACKING  MANIFEST.in  Makefile  Makefile.in  NEWS  README  TODO  autobuild.sh  generator.py  libvir.c  libvirt-lxc-override.c  libvirt-override-api.xml  libvirt-override-virConnect.py  libvirt-override-virDomain.py  libvirt-override-virDomainCheckpoint.py  libvirt-override-virDomainSnapshot.py  libvirt-override-virNetwork.py  libvirt-override-virStoragePool.py  libvirt-override-virStream.py  libvirt-override.c  libvirt-override.py  libvirt-py.c  libvirt-py.h  libvirt-python.spec.in  libvirt-qemu-override-api.xml  libvirt-qemu-override.c  libvirt-qemu-override.py  libvirt-utils.c  libvirt-utils.h  libvirt.py  libvirtaio.py  pytest.ini  (+7 more)
.github/: lockdown.yml
ci/: gitlab.yml  libvirt-centos-7.Dockerfile  libvirt-centos-8.Dockerfile  libvirt-debian-10.Dockerfile  libvirt-debian-9.Dockerfile  libvirt-debian-sid.Dockerfile  libvirt-fedora-31.Dockerfile  libvirt-fedora-32.Dockerfile  libvirt-fedora-rawhide.Dockerfile  libvirt-opensuse-151.Dockerfile  libvirt-ubuntu-1804.Dockerfile  libvirt-ubuntu-2004.Dockerfile  manifest.yml  refresh
examples/: README  consolecallback.py  dhcpleases.py  dominfo.py  domipaddrs.py  domrestore.py  domsave.py  domstart.py  esxlist.py  event-test.py  nodestats.py  sparsestream.py  topology.py
tests/: Makefile.in  eventmock.py  test_aio.py  test_api_coverage.py  test_conn.py  test_domain.py  test_domain_checkpoint.py  test_interface.py  (+4 more)
(+79 files in other folders)
