[metadata]
name = libvirt-python
version = file: VERSION
description = The libvirt virtualization API python binding
long_description = file: README
long_description_content_type = text/x-rst
url = http://www.libvirt.org
maintainer = Libvirt Maintainers
maintainer_email = libvir-list@redhat.com
license_files = COPYING
classifiers =
      Development Status :: 5 - Production/Stable
      Intended Audience :: Developers
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
package_dir =
    =build
